namespace Modeler.SequenceModel;

public abstract class MessageParameters
{
    
}