namespace Modeler.SequenceModel.Participants;

public abstract class ParticipantType
{}